--- a/rapport/Makefile
+++ b/rapport/Makefile
@@ -7,5 +7,14 @@ all:
 	@pdflatex -file-line-error DeepLearning.tex
 	@echo "\033[0;32m*** Glossary pass\033[0m"
 	@makeglossaries DeepLearning
+	@echo "\033[0;32m*** Asymptote pass\033[0m"
+	@asy DeepLearning-1.asy
 	@echo "\033[0;32m*** Final pass\033[0m"
 	@pdflatex -file-line-error DeepLearning.tex
+
+clean:
+	@echo "\033[0;32m*** Cleaning\033[0m"
+	@rm -f DeepLearning.aux
+	@rm -f DeepLearning-1.tex
+	@rm -f DeepLearning-1+0.tex
+	@echo "\033[0;32m*** Done\033[0m"
