--- a/FasTrack/CMakeLists.txt
+++ b/FasTrack/CMakeLists.txt
@@ -26,6 +26,8 @@ set(CMAKE_CXX_EXTENSIONS 0)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED 1)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+
 add_definitions(-DGLOG_NO_ABBREVIATED_SEVERITIES -DNO_STRICT)
 add_definitions(-D"USE_OPENCV=1")
 
